--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,4 +29,6 @@ workflows:
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
   sample: 
     jobs:
-      - build-and-test
+      - trading-team-orb/build:
+        solution_path: Marlin.BetPlacement.Host/Marlin.BetPlacement.Host.csproj
+        - build-and-test
