--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       # Then simply use the dotnet container as you'd expect and run your tests
       - run:
           # Update this line with the directory that contains your tests project file
-          working_directory: ~/project/App.Tests
+          solution_path: ConsoleApp1/ConsoleApp1.csproj
           name: Run tests
           command: |
             dotnet test
@@ -29,6 +29,4 @@ workflows:
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
   sample: 
     jobs:
-      - trading-team-orb/build:
-        solution_path: Marlin.BetPlacement.Host/Marlin.BetPlacement.Host.csproj
-        build-and-test
+      - build-and-test
