--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,4 +29,5 @@ workflows:
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
   sample: 
     jobs:
-      - build-and-test
+      #- build-and-test
+      echo "Murat"
