--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,4 +30,4 @@ workflows:
   sample: 
     jobs:
       #- build-and-test
-      - run: Write-Host 'Hello, Windows'
+      - run: echo "hello world" # run the `echo` command
