--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,11 @@ jobs:
             dotnet test            
       - run: echo "hello worl"
       - run: echo ${CIRCLE_BRANCH}
+      - when:
+          condition:
+             equal: [ main, << pipeline.git.branch >> ]
+          steps:
+            - run: echo "Maine geldik"
 
 workflows:
   # Below is the definition of your workflow.
