--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           condition:
              equal: [ main, << pipeline.git.branch >> ]
           steps:
-            - run: echo "Maine geldik"
+            - run: echo "Maine geldidk"
 
 workflows:
   # Below is the definition of your workflow.
