--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,11 @@ jobs:
           steps:
             - run: echo "Maine geldik"
       - run: echo << pipeline.git.branch >>  | cut -d 'n' -f 1            
-
+      - when:
+          condition:
+             equal: [ bra, << pipeline.git.branch >>  | cut -d 'n' -f 1 ]
+          steps:
+            - run: echo "Now run the feature"
 workflows:
   # Below is the definition of your workflow.
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
