--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - run: echo << pipeline.git.branch >>  | cut -d 'n' -f 1            
       - when:
           condition:
-             equal: [ bra, << pipeline.git.branch >>  | cut -d 'n' -f 1 ]
+             equal: [ bra, (<< pipeline.git.branch >>  | cut -d 'n' -f 1)]
           steps:
             - run: echo "Now run the feature"
 workflows:
