--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           #condition:
            #  equal: [ bra , (<< pipeline.git.branch >>  | cut -d 'n' -f 1)]
       #    steps:
-      - run: $VARI =  << pipeline.git.branch >>  | cut -d 'n' -f 1
+      - run: VARI =  << pipeline.git.branch >>  | cut -d 'n' -f 1
       - run: echo "Now run the feature"
       - run: echo $VARI
 workflows:
