--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,9 +33,10 @@ jobs:
            #  equal: [ bra , (<< pipeline.git.branch >>  | cut -d 'n' -f 1)]
       #    steps:
       - run: 
-        VARI =  << pipeline.git.branch >>  | cut -d 'n' -f 1
-        echo "Now run the feature"
-        echo "$VARI"
+        command: |
+          VARI =  << pipeline.git.branch >>  | cut -d 'n' -f 1
+          echo "Now run the feature"
+          echo "$VARI"
 workflows:
   # Below is the definition of your workflow.
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
