--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
         name: Set VARI
         command: VARI =  << pipeline.git.branch >>  | cut -d 'n' -f 1
           #echo "Now run the feature"
-          echo "$VARI"
+          echo $VARI
       
 workflows:
   # Below is the definition of your workflow.
