--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
            #  equal: [ bra , (<< pipeline.git.branch >>  | cut -d 'n' -f 1)]
       #    steps:
       - run: 
-        name: Set VARI
+        name: "Set VARI"
         command: |
             VARI =  << pipeline.git.branch >>  | cut -d 'n' -f 1
             #echo "Now run the feature"
