--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,8 @@ jobs:
       - run: 
           name: "Set VARI"
           command: |
-              echo 'export MY_ENV_VAR="FOO"'              
-              echo ${MY_ENV_VAR}
+              echo 'export VARI="FOO"'              
+              echo ${VARI}
       
 workflows:
   # Below is the definition of your workflow.
