--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       - run: 
           name: "Set VARI"
           command: |
-              VARI=<< pipeline.git.branch >>  | cut -d 'n' -f 1 # "FOO"              
+              VARI = echo << pipeline.git.branch >>  | cut -d 'n' -f 1 # "FOO"              
               echo $VARI
       
 workflows:
