--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,9 @@ jobs:
       - run: 
           name: "Set VARI"
           command: |
-              VARI = $(<< pipeline.git.branch >>  | cut -d 'n' -f 1)
-              # "FOO"              
+              VARI = (<< pipeline.git.branch >>  | cut -d 'n' -f 1)
+              # "FOO"      
+              echo ${VARI}
               echo $VARI
       
 workflows:
