--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ jobs:
     # Be sure to update the tag on this image to a more stable version, using latest can result in unstable builds.
     docker:
       - image:  mcr.microsoft.com/dotnet/core/sdk:3.1-focal
+    filters:
+      branches:
+      only: - /feature-.*/      
     steps:
       # Checkout the code as the first step.
       - checkout
@@ -46,8 +49,4 @@ workflows:
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
   sample: 
     jobs:
-      - build-and-test      
-          filters:
-            branches:
-              only:
-                  - /feature-.*/
+      - build-and-test          
