--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,7 @@ jobs:
     # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # Be sure to update the tag on this image to a more stable version, using latest can result in unstable builds.
     docker:
-      - image:  mcr.microsoft.com/dotnet/core/sdk:3.1-focal
-    filters:
-      branches:
-        only: 
-          -bran.*/      
+      - image:  mcr.microsoft.com/dotnet/core/sdk:3.1-focal    
     steps:
       # Checkout the code as the first step.
       - checkout
@@ -42,6 +38,10 @@ jobs:
       #        VARI = "FOO"      
       #        echo ${VARI}
       #        echo $VARI
+    filters:
+      branches:
+        only: 
+          - branch2  
       
 workflows:
   # Below is the definition of your workflow.
