--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,11 +37,7 @@ jobs:
       #    command: |
       #        VARI = "FOO"      
       #        echo ${VARI}
-      #        echo $VARI
-    filters:
-      branches:
-        only: 
-          - branc2     
+      #        echo $VARI     
 
 workflows:
   # Below is the definition of your workflow.
@@ -50,4 +46,8 @@ workflows:
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
   sample: 
     jobs:
-      - build-and-test   
+      - build-and-test:
+        filters:
+          branches:
+            only: 
+              - branc2    
